--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -2,7 +2,7 @@ FROM node:12-alpine
 
 WORKDIR /app
 
-RUN set -eux ; \
+RUN	set -eux ; \
 	apk add --no-cache --virtual .build-deps \
 		build-base \
 		gcc \
@@ -11,8 +11,13 @@ RUN set -eux ; \
 		git \
 		python3 \
 	; \
-	npm --global config set user root ; \
-	npm --global install screeps --cache /tmp/empty-cache ; \
+	npm --global config set user root ;
+
+ARG version=latest
+ENV VERSION=${version:-latest}
+
+RUN	set -eux ; \
+	npm --global install "screeps@${VERSION}" --cache /tmp/empty-cache ; \
 	apk del --no-cache .build-deps ; \
 	rm -fr /tmp/empty-cache /root/.cache /root/.config ;
 
